# screen_clock

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml
.claude/hooks/: .coverage  5w1h-compliance-check-hook.py  README.md  acceptance-gate-hook.py  active-dispatch-tracker-hook.py  agent-commit-verification-hook.py  agent-definition-standard-check-hook.py  agent-dispatch-logger-hook.py  agent-dispatch-validation-hook.py  agent-prompt-length-guard-hook.py  agent-ticket-validation-hook.py  ana-ticket-metadata-validation-hook.py  askuserquestion-charset-guard-hook.py  askuserquestion-reminder-hook.py  auq-option-pattern-detector-hook.py  bash-edit-guard-hook.py  branch-status-reminder.py  branch-verify-hook.py  build-staleness-check-hook.py  changelog-update-hook.py  cli-dependency-check.py  cli-error-feedback-hook.py  cli-failure-help-reminder-hook.py  command-entrance-gate-hook.py  comment-qa-config.yaml  comment-qa-hook.py  commit-handoff-hook.py  commit-msg-layer2-marker-check-hook.py  context-depth-warning-hook.py  creation-acceptance-gate-hook.py  deletion-residual-reference-hook.py  dispatch-count-guard-hook.py  dispatch-record-hook.py  dispatch_stats.py  doc-sync-check-hook.py  eval_pyyaml.py  external-query-guide-hook.py  file-ownership-guard-hook.py  file-size-guardian-hook.py  file-type-permission-hook.py  (+88 more)
.claude/hooks/acceptance_checkers/: __init__.py  acceptance_checker.py  ana_spawn_consistency_checker.py  ana_spawned_checker.py  children_checker.py  custom_h2_checker.py  error_pattern_attribution.py  error_pattern_checker.py  execution_log_checker.py  five_w1h_checker.py  multi_view_checker.py  self_check_visibility_checker.py  sibling_checker.py  ticket_parser.py
.claude/hooks/archived/: 5w1h-token-generator.py  ARCHIVE-README.md  agent_dispatch_analytics.py  agent_dispatch_recovery.py  check-next-objectives.py  generate-context-resume.py  hook-auto-register.py  pre-compact.py  required-features-check.py  show-cache-stats.py  tdd-phase-check-hook.py  test-summary.py  test_ticket_tracker.py  ticket-creator.py  ticket-tracker.py
.claude/hooks/hook-logs/: context-depth-warning-state.json
.claude/hooks/hook_utils/: __init__.py  hook_base.py  hook_io.py  hook_logging.py  hook_ticket.py
.claude/hooks/lib/: ask_user_question_reminders.py  common_functions.py  constants.py  dispatch_tracker.py  framework_paths.py  frontmatter_parser.py  hook_health.py  hook_messages.py  hook_output_validator.py  markdown_formatter.py  parse-test-json.py  path_permission.py  pattern_id.py  sync_exclude_manifest.py  transcript_tail_reader.py  uv_tool_utils.py
.claude/hooks/lib/parsers/: __init__.py  base.py  dart_parser.py  javascript_parser.py
.claude/hooks/lib/ticket_quality/: ARCHITECTURE.md  __init__.py  analyzers.py  detectors.py  extractors.py  reporters.py
.claude/hooks/tests/: README.md  __init__.py  conftest.py  debug_build_function.py  debug_dart_parser.py  debug_line_scan.py  debug_void_function.py  manual_test_dart_parser.py  manual_test_javascript_parser.py  test_5w1h_compliance_hook.py  test_acceptance_checker_doc_only.py  test_acceptance_checker_frontmatter.py  test_acceptance_gate_hook.py  test_active_dispatch_tracker_hook.py  test_agent_commit_verification_hook_dedup.py  test_agent_commit_verification_hook_porcelain.py  test_agent_commit_verification_hook_scan_errors.py  test_agent_commit_verification_hook_schema.py  test_agent_definition_standard_check_hook.py  test_agent_dispatch_check.py  test_agent_dispatch_validation_hook.py  test_agent_prompt_length_guard_hook.py  test_agent_ticket_validation_hook.py  test_ana_spawn_consistency_checker.py  test_ana_spawned_checker.py  test_ana_ticket_metadata_validation_hook.py  test_analytics.py  test_askuserquestion_charset_guard.py  test_auq_option_pattern_detector.py  test_background_dispatch_skip.py  test_bash_edit_guard_hook.py  test_basic_functionality.py  test_branch_status_reminder_full_listing.py  test_branch_verify_cross_repo.py  test_build_staleness_check_hook.py  test_command_entrance_gate.py  test_commit_handoff_hook.py  test_commit_msg_layer2_marker_check_hook.py  test_context_depth_warning_hook.py  test_custom_h2_checker.py  (+93 more)
.claude/hooks/tests/fixtures/: sample_annotations.json  sample_events.jsonl
.claude/skills/doc/: SKILL.md  pyproject.toml
.claude/skills/doc/doc_system/: __init__.py  cli.py
.claude/skills/doc/references/: legacy-code-workflow.md  proposal-evaluation-guide.md  proposals.md  review-notes.md  spec.md  tracking.md  usecases.md
.claude/skills/doc/templates/: legacy-assessment-report-template.md  proposal-template.md  spec-template.md  usecase-template.md
.claude/skills/doc/tests/: test_create.py  test_domain.py  test_file_locator.py  test_frontmatter_parser.py  test_list_cmd.py  test_nav.py  test_query.py  test_status.py  test_test_map.py  test_update.py
.claude/skills/mermaid-ascii/: SKILL.md  pyproject.toml
.claude/skills/mermaid-ascii/mermaid_ascii/: __init__.py  mermaid_ascii_renderer.py  messages.py
.claude/skills/mermaid-ascii/references/: supported-diagrams.md
.claude/skills/mermaid-ascii/tests/: __init__.py  test_mermaid_ascii_renderer.py  test_render_cli.py
.claude/skills/project-init/: SKILL.md  pyproject.toml
.claude/skills/project-init/project_init/: __init__.py
.claude/skills/project-init/references/: platform-install-guide.md  remediation-guides.md
.claude/skills/ticket/: CHAIN_INDEX_USAGE.md  CYCLE_DETECTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  RELATED_TO_FEATURE.md  SKILL.md  conftest.py  pyproject.toml  test_migration_dryrun.py
.claude/skills/ticket/tests/: __init__.py  (+95 more)
.claude/skills/version-release/: .version-release.yaml  BUILD_SUMMARY.md  ENHANCEMENT_SUMMARY.md  INDEX.md  QUICK_START.md  SKILL.md  TECH_DEBT_GUIDE.md  pyproject.toml
.claude/skills/worktree/: SKILL.md  pyproject.toml
(+1601 files in other folders)
