[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-init"
version = "1.1.0"
description = "Environment initialization tool - 環境初始化工具，檢查和設定開發環境"
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]
authors = [
    {name = "Claude Code", email = "claude@anthropic.com"}
]
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
project-init = "project_init.scripts.main:main"

[tool.hatch.build.targets.wheel]
packages = ["project_init"]

[tool.hatch.build.targets.sdist]
include = [
    "project_init/**/*.py",
    "pyproject.toml",
    "SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--verbose"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
